--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -14,6 +14,8 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "types": ["node"],
+
 
     /* Linting */
     "strict": true,
