--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_API_URL=https://remind-backend-rid6.onrender.com
-VITE_FRONTEND_API_URL=http://localhost:5173
+VITE_FRONTEND_API_URL=hhttps://remind-app-3bs7.onrender.com
